--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-inlinesvg": "^4.1.1",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/node": "^20.13.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/three": "^0.169.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vite-plugin-checker": "^0.6.4",
