--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@dimforge/rapier3d": "^0.14.0",
     "events": "^3.3.0",
     "gl-matrix": "^3.4.3",
     "react": "^17.0.0",
@@ -25,6 +26,7 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-wasm": "^3.3.0",
     "vitest": "^1.6.0"
   }
 }
