--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@dimforge/rapier3d": "^0.14.0",
+    "@dimforge/rapier3d-compat": "^0.14.0",
     "events": "^3.3.0",
     "gl-matrix": "^3.4.3",
     "react": "^17.0.0",
