--- a/.gitattributes
+++ b/.gitattributes
@@ -32,3 +32,5 @@
 *.wmv filter=lfs diff=lfs merge=lfs -text
 *.fla filter=lfs diff=lfs merge=lfs -text
 *.swf filter=lfs diff=lfs merge=lfs -text
+*.br filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
