--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "engine": "npm run generate-animations && cross-env NODE_OPTIONS=\"--loader ts-node/esm\" ts-node ./engine/index.ts",
     "generate-animations": "node ./public/3d/animations/_generate.js"
   },
   "dependencies": {
@@ -20,14 +21,23 @@
     "three": "^0.171.0"
   },
   "devDependencies": {
+    "@types/brotli": "^1.3.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^20.13.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/three": "^0.169.0",
+    "brotli": "^1.3.3",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "express": "^4.21.1",
     "fbx2gltf": "^0.9.7-p1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-wasm": "^3.3.0",
     "vitest": "^1.6.0"
   }
