--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.14.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "events": "^3.3.0",
     "gl-matrix": "^3.4.3",
     "react": "^17.0.0",
