--- a/.gitattributes
+++ b/.gitattributes
@@ -34,3 +34,4 @@
 *.swf filter=lfs diff=lfs merge=lfs -text
 *.br filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
+*.mid filter=lfs diff=lfs merge=lfs -text
