--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "events": "^3.3.0",
     "gl-matrix": "^3.4.3",
+    "midi-file": "^1.2.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-inlinesvg": "^4.1.1",
+    "react-inlinesvg": "^4.1.8",
     "react-router-dom": "^6.21.1",
     "three": "^0.171.0"
   },
