--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
   },
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.14.0",
+    "@gltf-transform/core": "^4.1.1",
+    "@gltf-transform/extensions": "^4.1.1",
+    "@gltf-transform/functions": "^4.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "draco3dgltf": "^1.5.7",
     "events": "^3.3.0",
     "gl-matrix": "^3.4.3",
+    "i": "^0.3.7",
     "midi-file": "^1.2.4",
+    "npm": "^11.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-inlinesvg": "^4.1.8",
     "react-router-dom": "^6.21.1",
+    "sharp": "^0.33.5",
     "three": "^0.171.0"
   },
   "devDependencies": {
     "@types/brotli": "^1.3.4",
     "@types/cors": "^2.8.17",
+    "@types/draco3dgltf": "^1.4.3",
     "@types/express": "^5.0.0",
     "@types/node": "^20.13.0",
     "@types/react": "^17.0.0",
