--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev-tripshred": "cross-env ENV=development PROJECT=tripshred vite",
+    "dev-crazeoh": "cross-env ENV=development PROJECT=crazeoh vite",
+    "dev-loh": "cross-env ENV=development PROJECT=loh vite",
+    "build-tripshred": "cross-env ENV=production PROJECT=tripshred vite build",
+    "build-crazeoh": "cross-env ENV=production PROJECT=crazeoh vite build",
+    "build-loh": "cross-env ENV=production PROJECT=loh vite build",
     "preview": "vite preview",
     "test": "vitest",
     "engine": "npm run generate-animations && cross-env NODE_OPTIONS=\"--loader ts-node/esm\" ts-node ./engine/index.ts",
@@ -42,12 +46,14 @@
     "brotli": "^1.3.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "fbx2gltf": "^0.9.7-p1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-ejs": "^1.7.0",
     "vite-plugin-wasm": "^3.3.0",
     "vitest": "^1.6.0"
   }
