--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "fbx2gltf": "^0.9.7-p1",
+    "rollup-plugin-ignore": "^1.0.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
