--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev-tripshred": "cross-env ENV=development PROJECT=tripshred vite",
-    "dev-crazeoh": "cross-env ENV=development PROJECT=crazeoh vite",
-    "dev-loh": "cross-env ENV=development PROJECT=loh vite",
-    "build-tripshred": "cross-env ENV=production PROJECT=tripshred vite build",
-    "build-crazeoh": "cross-env ENV=production PROJECT=crazeoh vite build",
-    "build-loh": "cross-env ENV=production PROJECT=loh vite build",
-    "preview": "cross-env ENV=development PROJECT=crazeoh vite preview",
+    "dev-tripshred": "cross-env ENV=development VITE_PROJECT=tripshred vite",
+    "dev-crazeoh": "cross-env ENV=development VITE_PROJECT=crazeoh vite",
+    "dev-loh": "cross-env ENV=development VITE_PROJECT=loh vite",
+    "build-tripshred": "cross-env ENV=production VITE_PROJECT=tripshred vite build",
+    "build-crazeoh": "cross-env ENV=production VITE_PROJECT=crazeoh vite build",
+    "build-loh": "cross-env ENV=production VITE_PROJECT=loh vite build",
+    "preview": "cross-env ENV=development VITE_PROJECT=crazeoh vite preview",
     "test": "vitest",
     "engine": "npm run generate-animations && cross-env NODE_OPTIONS=\"--loader ts-node/esm\" ts-node ./engine/index.ts",
     "generate-animations": "node ./public/3d/animations/_generate.js",
