--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install dependencies & build
         run: |
-          npm ci
+          npm i
           npm run build
 
       - name: Configure AWS credentials
